OSDOCS#11830: Networking HCP Migration

--- a/modules/rosa-getting-started-create-cluster-admin-user.adoc
+++ b/modules/rosa-getting-started-create-cluster-admin-user.adoc
@@ -18,7 +18,10 @@ Before configuring an identity provider, you can create a user with `cluster-adm
 
 [NOTE]
 ====
-The cluster administrator user is useful when you need quick access to a newly deployed cluster. However, consider configuring an identity provider and granting cluster administrator privileges to the identity provider users as required. For more information about setting up an identity provider for your ROSA cluster, see _Configuring an identity provider and granting cluster access_.
+The cluster administrator user is useful when you need quick access to a newly deployed cluster. However, consider configuring an identity provider and granting cluster administrator privileges to the identity provider users as required. 
+ifndef::openshift-rosa-hcp[]
+For more information about setting up an identity provider for your ROSA cluster, see _Configuring an identity provider and granting cluster access_.
+endif::openshift-rosa-hcp[]
 ====
 
 ifdef::getting-started[]
