--- a/modules/rosa-sts-creating-a-cluster-using-defaults-ocm.adoc
+++ b/modules/rosa-sts-creating-a-cluster-using-defaults-ocm.adoc
@@ -26,7 +26,10 @@ ifdef::quick-install[]
 * You have verified that the AWS Elastic Load Balancing (ELB) service role exists in your AWS account.
 * You have associated your AWS account with your Red{nbsp}Hat organization. When you associated your account, you applied the administrative permissions to the {cluster-manager} role. For detailed steps, see _Associating your AWS account with your Red{nbsp}Hat organization_.
 * You have created the required account-wide STS roles and policies. For detailed steps, see _Creating the account-wide STS roles and policies_.
-endif::[]
+ifdef::openshift-rosa-hcp[]
+* You have created a virtual private cloud (VPC) and its subnets.
+endif::openshift-rosa-hcp[]
+endif::quick-install[]
 
 .Procedure
 
@@ -34,12 +37,24 @@ endif::[]
 
 . On the *Create an OpenShift cluster* page, select *Create cluster* in the *{product-title} (ROSA)* row.
 
-. Verify that your AWS account ID is listed in the *Associated AWS accounts* drop-down menu and that the installer, support, worker, and control plane account role Amazon Resource Names (ARNs) are listed on the *Accounts and roles* page.
+. On the *Control plane* page, select 
+ifdef::openshift-rosa[]
+*Classic* to build a ROSA cluster that uses the classic architecture.
+endif::openshift-rosa[]
+ifdef::openshift-rosa-hcp[]
+*Hosted* to build a ROSA cluster that uses an architecture where the control plane is decoupled from the data plane.
+endif::openshift-rosa-hcp[]
+
+. On the *Accounts and roles* page, verify that your AWS account ID is listed in the *Associated AWS accounts* drop-down menu in the *AWS infrastructure account* section. Your AWS account is used in the installer, support, worker, and control plane account role Amazon Resource Names (ARNs).
 +
 [NOTE]
 ====
 If your AWS account ID is not listed, check that you have successfully associated your AWS account with your Red{nbsp}Hat organization. If your account role ARNs are not listed, check that the required account-wide STS roles exist in your AWS account.
 ====
+ifdef::openshift-rosa-hcp[]
++
+. Verify that the correct AWS account ID is listed in the *AWS billing account* drop-down menu in the *AWS billing account* section.
+endif::openshift-rosa-hcp[]
 
 . Click *Next*.
 
@@ -49,7 +64,25 @@ If your AWS account ID is not listed, check that you have successfully associate
 ====
 Cluster creation generates a domain prefix as a subdomain for your provisioned cluster on `openshiftapps.com`. If the cluster name is less than or equal to 15 characters, that name is used for the domain prefix. If the cluster name is longer than 15 characters, the domain prefix is randomly generated as a 15-character string. To customize the subdomain, select the *Create custom domain prefix* checkbox, and enter your domain prefix name in the *Domain prefix* field.
 ====
+ifdef::openshift-rosa-hcp[]
+. On the *Cluster settings* page, choose your VPC from the *Select a VPC to install your machine pools into your selected region:<aws-region-for-cluster>*. This list includes all VPCs associated with your AWS region. 
++
+[NOTE]
+====
+You can only create a cluster in the same region as your VPC.
+====
+
+. After you select your VPC, you must select the name of the private subnet where you want to install this machine pool. The drop-down menu populates with the private subnets associated with your selected VPC.
+endif::openshift-rosa-hcp[]
+
+ifdef::openshift-rosa[]
 . To deploy a cluster quickly, leave the default options in the *Cluster settings*, *Networking*, *Cluster roles and policies*, and *Cluster updates* pages and click *Next* on each page.
+endif::openshift-rosa[]
+ifdef::openshift-rosa-hcp[]
+. To deploy a cluster quickly, leave the default options in the *Cluster settings* and *Cluster updates* pages and click *Next* on each page. 
+. On the *Networking* page, if your cluster is publicly available, verify that your public subnet is listed under the *Public subnet name* drop-down menu.
+. On the *Cluster roles and policies* page, verify that your OIDC config ID is listed under *Config ID*. After you select your OIDC config ID, run the generated command to create your Operator roles. 
+endif::openshift-rosa-hcp[]
 
 . On the *Review your ROSA cluster* page, review the summary of your selections and click *Create cluster* to start the installation.
 +
