--- a/modules/rosa-sts-creating-account-wide-sts-roles-and-policies.adoc
+++ b/modules/rosa-sts-creating-account-wide-sts-roles-and-policies.adoc
@@ -39,9 +39,17 @@ endif::[]
 
 . If they do not exist in your AWS account, create the required account-wide STS roles and policies:
 +
+ifdef::openshift-rosa[]
 [source,terminal]
 ----
 $ rosa create account-roles
 ----
+endif::openshift-rosa[]
+ifdef::openshift-rosa-hcp[]
+[source,terminal]
+----
+$ rosa create account-roles --hosted-cp
+----
+endif::openshift-rosa-hcp[]
 +
 Select the default values at the prompts to quickly create the roles and policies.
