--- a/networking/about-managed-networking.adoc
+++ b/networking/about-managed-networking.adoc
@@ -10,13 +10,15 @@ toc::[]
 
 The following are some of the most commonly used {openshift-networking} features available on your cluster:
 
+- Cluster Network Operator for network plugin management
 - Primary cluster network provided by either of the following Container Network Interface (CNI) plugins:
   * xref:../networking/ovn_kubernetes_network_provider/about-ovn-kubernetes.adoc#about-ovn-kubernetes[OVN-Kubernetes network plugin] - the default plugin
-  * link:https://docs.redhat.com/en/documentation/openshift_container_platform/4.14/html/networking/openshift-sdn-network-plugin#nw-openshift-sdn-modes_about-openshift-sdn[OpenShift SDN network plugin]- deprecated for clusters as of OpenShift 4.14
-- Cluster Network Operator for network plugin management
+ifndef::openshift-rosa-hcp[]
+  * link:https://docs.redhat.com/en/documentation/openshift_container_platform/4.14/html/networking/openshift-sdn-network-plugin#nw-openshift-sdn-modes_about-openshift-sdn[OpenShift SDN network plugin] - deprecated for clusters as of OpenShift 4.14
 
 {product-title} clusters created with OpenShift 4.11 and above use OVN-Kubernetes network plugin by default. {product-title} clusters created before OpenShift version 4.11 use the OpenShift SDN plugin after they are upgraded to OpenShift version 4.11 and above.
 
 include::snippets/sdn-deprecation-statement-managed.adoc[]
 
 You will soon be able to migrate from OpenShift SDN to OVN for clusters running on OpenShift version 4.15 and later. This migration tool is not currently available. For more information about the OpenShift SDN deprecation and the OVN migration, see the KCS article about link:https://access.redhat.com/articles/7065170[OpenShift SDN CNI removal in OCP 4.17].
+endif::openshift-rosa-hcp[]
