--- a/networking/ingress-operator.adoc
+++ b/networking/ingress-operator.adoc
@@ -4,12 +4,13 @@
 ifdef::openshift-enterprise[]
 include::_attributes/common-attributes.adoc[]
 endif::[]
-ifdef::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 include::_attributes/attributes-openshift-dedicated.adoc[]
-endif::[]
+endif::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 :context: configuring-ingress
 
 toc::[]
+
 include::modules/nw-ne-openshift-ingress.adoc[leveloffset=+1]
 
 //ifndef::openshift-rosa,openshift-dedicated[] NOTE: commenting out this ifndef to track what was in place before OSDOCS-4883.
@@ -53,7 +54,7 @@ include::modules/nw-ingress-custom-default-certificate-remove.adoc[leveloffset=+
 // Autoscaling an Ingress Controller
 include::modules/nw-autoscaling-ingress-controller.adoc[leveloffset=+2]
 
-ifndef::openshift-rosa,openshift-dedicated[]
+ifndef::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 [role="_additional-resources"]
 .Additional resources
 
@@ -66,7 +67,7 @@ ifndef::openshift-rosa,openshift-dedicated[]
 * xref:../nodes/cma/nodes-cma-autoscaling-custom-trigger.adoc#nodes-cma-autoscaling-custom-prometheus[Configuring the custom metrics autoscaler to use {product-title} monitoring]
 
 * xref:../nodes/cma/nodes-cma-autoscaling-custom-adding.adoc#nodes-cma-autoscaling-custom-adding[Understanding how to add custom metrics autoscalers]
-endif::openshift-rosa,openshift-dedicated[]
+endif::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 
 include::modules/nw-scaling-ingress-controller.adoc[leveloffset=+2]
 
@@ -76,9 +77,9 @@ include::modules/nw-ingress-setting-thread-count.adoc[leveloffset=+2]
 
 include::modules/nw-ingress-setting-internal-lb.adoc[leveloffset=+2]
 
-ifndef::openshift-rosa,openshift-dedicated[]
+ifndef::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 include::modules/nw-ingress-controller-configuration-gcp-global-access.adoc[leveloffset=+2]
-endif::openshift-rosa,openshift-dedicated[]
+endif::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 
 include::modules/nw-ingress-controller-config-tuningoptions-healthcheckinterval.adoc[leveloffset=+2]
 
@@ -99,10 +100,12 @@ include::modules/nw-http2-haproxy.adoc[leveloffset=+2]
 // Configuring the PROXY protocol for an Ingress Controller
 include::modules/nw-ingress-controller-configuration-proxy-protocol.adoc[leveloffset=+2]
 
+ifndef::openshift-rosa-hcp[]
 [role="_additional-resources"]
 .Additional resources
 
 * xref:../networking/ingress-operator.adoc#nw-configure-ingress-access-logging_configuring-ingress[Configuring Ingress access logging]
+endif::openshift-rosa-hcp[]
 
 // Specifying an alternative cluster domain using the appsDomain option
 include::modules/nw-ingress-configuring-application-domain.adoc[leveloffset=+2]
@@ -119,13 +122,13 @@ include::modules/nw-customize-ingress-error-pages.adoc[leveloffset=+2]
 include::modules/nw-ingress-setting-max-connections.adoc[leveloffset=+2]
 //endif::openshift-rosa,openshift-dedicated[] NOTE: commenting out this ifndef to track what was in place before OSDOCS-4883.
 
-ifdef::openshift-rosa,openshift-dedicated[]
+ifdef::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 include::modules/sd-ingress-responsibilities.adoc[leveloffset=+1]
-endif::openshift-rosa,openshift-dedicated[]
+endif::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 
-ifndef::openshift-rosa,openshift-dedicated[]
+ifndef::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
 [role="_additional-resources"]
 == Additional resources
 
 * xref:../networking/configuring-a-custom-pki.adoc#configuring-a-custom-pki[Configuring a custom PKI]
-endif::openshift-rosa,openshift-dedicated[]
+endif::openshift-rosa,openshift-rosa-hcp,openshift-dedicated[]
