--- a/rosa_hcp/rosa-hcp-deleting-cluster.adoc
+++ b/rosa_hcp/rosa-hcp-deleting-cluster.adoc
@@ -11,7 +11,7 @@ If you want to delete a {hcp-title-first} cluster, you can use either the {clust
 include::modules/rosa-hcp-deleting-cluster.adoc[leveloffset=+1]
 
 .Troubleshooting
-* If the cluster cannot be deleted because of missing IAM roles, see xref:../support/troubleshooting/rosa-troubleshooting-deployments.adoc#rosa-troubleshooting-cluster-deletion_rosa-troubleshooting-cluster-deployments[Repairing a cluster that cannot be deleted].
+* If the cluster cannot be deleted because of missing IAM roles, see link:https://docs.openshift.com/rosa/support/troubleshooting/rosa-troubleshooting-deployments.html#rosa-troubleshooting-cluster-deletion_rosa-troubleshooting-cluster-deployments[Repairing a cluster that cannot be deleted].
 * If the cluster cannot be deleted for other reasons:
 ** Ensure that there are no add-ons for your cluster pending in the link:https://console.redhat.com/openshift[Hybrid Cloud Console].
 ** Ensure that all AWS resources and dependencies have been deleted in the Amazon Web Console.
@@ -21,13 +21,13 @@ include::modules/rosa-deleting-sts-iam-resources-account-wide.adoc[leveloffset=+
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../support/troubleshooting/rosa-troubleshooting-deployments.adoc#rosa-troubleshooting-cluster-deletion_rosa-troubleshooting-cluster-deployments[Repairing a cluster that cannot be deleted]
+* link:https://docs.openshift.com/rosa/support/troubleshooting/rosa-troubleshooting-deployments.html#rosa-troubleshooting-cluster-deletion_rosa-troubleshooting-cluster-deployments[Repairing a cluster that cannot be deleted]
 
 include::modules/rosa-deleting-account-wide-iam-roles-and-policies.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional resources
 
-* xref:../rosa_architecture/rosa-sts-about-iam-resources.adoc#rosa-sts-about-iam-resources[About IAM resources for ROSA clusters that use STS]
+* link:https://docs.openshift.com/rosa/rosa_architecture/rosa-sts-about-iam-resources.html#rosa-sts-about-iam-resources[About IAM resources for ROSA clusters that use STS]
 
 include::modules/rosa-unlinking-and-deleting-ocm-and-user-iam-roles.adoc[leveloffset=+2]
