--- a/rosa_getting_started/rosa-quickstart-guide-ui.adoc
+++ b/rosa_getting_started/rosa-quickstart-guide-ui.adoc
@@ -13,6 +13,12 @@ If you are looking for a comprehensive getting started guide for {product-title}
 
 Follow this guide to quickly create a {product-title} (ROSA) cluster using {cluster-manager-first} on the {hybrid-console-url}, grant user access, deploy your first application, and learn how to revoke user access and delete your cluster.
 
+//
+//
+// OSDOCS-11538: Getting Started Migration - These links go to sections that are not yet migrated to the ROSA with HCP book.
+// 
+//
+ifndef::openshift-rosa-hcp[]
 The procedures in this document enable you to create a cluster that uses AWS Security Token Service (STS). For more information about using AWS STS with ROSA clusters, see xref:../rosa_architecture/rosa-understanding.adoc#rosa-understanding-aws-sts_rosa-understanding[Using the AWS Security Token Service].
 
 image::291_OpenShift_on_AWS_Intro_1122_docs.png[{product-title}]
@@ -27,7 +33,7 @@ image::291_OpenShift_on_AWS_Intro_1122_docs.png[{product-title}]
 * You have reviewed the detailed xref:../rosa_planning/rosa-sts-aws-prereqs.adoc#rosa-sts-aws-prereqs[AWS prerequisites for ROSA with STS].
 
 * You have the xref:../rosa_planning/rosa-sts-required-aws-service-quotas.adoc#rosa-sts-required-aws-service-quotas[AWS service quotas that are required to run a ROSA cluster].
-
+endif::openshift-rosa-hcp[]
 
 //This content is pulled from rosa-getting-started-environment-setup.adoc
 include::modules/rosa-getting-started-environment-setup.adoc[leveloffset=+1]
@@ -80,13 +86,16 @@ include::modules/rosa-sts-creating-account-wide-sts-roles-and-policies.adoc[leve
 [discrete]
 include::modules/rosa-sts-creating-a-cluster-using-defaults-ocm.adoc[leveloffset=+2]
 
-////
 .Additional resources
 
+ifndef::openshift-rosa-hcp[]
 * For information about the account-wide IAM roles and policies that are required for ROSA deployments that use STS, see xref:../rosa_architecture/rosa-sts-about-iam-resources.adoc#rosa-sts-account-wide-roles-and-policies_rosa-sts-about-iam-resources[Account-wide IAM role and policy reference].
 * For details about using the `auto` and `manual` modes to create the required STS resources, see xref:../rosa_install_access_delete_clusters/rosa-sts-creating-a-cluster-with-customizations.adoc#rosa-understanding-deployment-modes_rosa-sts-creating-a-cluster-with-customizations[Understanding the auto and manual deployment modes].
 * For information about the update life cycle for ROSA, see xref:../rosa_architecture/rosa_policy_service_definition/rosa-life-cycle.adoc#rosa-life-cycle[{product-title} update life cycle].
-////
+endif::openshift-rosa-hcp[]
+ifndef::openshift-rosa[]
+* For information about the update life cycle for ROSA, see xref:../rosa_architecture/rosa_policy_service_definition/rosa-hcp-life-cycle.adoc#rosa-hcp-life-cycle[{product-title} update life cycle].
+endif::openshift-rosa[]
 
 
 //This content is pulled from rosa-getting-started-create-cluster-admin-user.adoc
@@ -107,8 +116,14 @@ include::modules/rosa-getting-started-configure-an-idp.adoc[leveloffset=+2]
 
 .Additional resource
 
+//
+//
+// OSDOCS-11538: Getting Started Migration - These links go to sections that are not yet migrated to the ROSA with HCP book.
+// 
+//
+ifndef::openshift-rosa-hcp[]
 * For detailed steps to configure each of the supported identity provider types, see xref:../rosa_install_access_delete_clusters/rosa-sts-config-identity-providers.adoc#rosa-sts-config-identity-providers[Configuring identity providers for STS].
-
+endif::openshift-rosa-hcp[]
 
 //This content is pulled from rosa-getting-started-grant-user-access.adoc
 [discrete]
@@ -122,8 +137,15 @@ include::modules/rosa-getting-started-grant-admin-privileges.adoc[leveloffset=+2
 [role="_additional-resources"]
 .Additional resources
 
+//
+//
+// OSDOCS-11538: Getting Started Migration - These links go to sections that are not yet migrated to the ROSA with HCP book.
+// 
+//
+ifndef::openshift-rosa-hcp[]
 * xref:../rosa_architecture/rosa_policy_service_definition/rosa-service-definition.adoc#rosa-sdpolicy-cluster-admin-role_rosa-service-definition[Cluster administration role]
 * xref:../rosa_architecture/rosa_policy_service_definition/rosa-service-definition.adoc#rosa-sdpolicy-customer-admin-user_rosa-service-definition[Customer administrator user]
+endif::openshift-rosa-hcp[]
 
 //This content is pulled from rosa-getting-started-access-cluster-web-console.adoc
 include::modules/rosa-getting-started-access-cluster-web-console.adoc[leveloffset=+1]
@@ -150,6 +172,12 @@ include::modules/rosa-getting-started-revoke-user-access.adoc[leveloffset=+2]
 //This content is pulled from rosa-getting-started-deleting-a-cluster.adoc
 include::modules/rosa-getting-started-deleting-a-cluster.adoc[leveloffset=+1]
 
+//
+//
+// OSDOCS-11538: Getting Started Migration - These links go to sections that are not yet migrated to the ROSA with HCP book.
+// 
+//
+ifndef::openshift-rosa-hcp[]
 [id="next-steps_{context}"]
 == Next steps
 
@@ -165,4 +193,12 @@ include::modules/rosa-getting-started-deleting-a-cluster.adoc[leveloffset=+1]
 
 * For more information about setting up accounts and ROSA clusters without using AWS STS, see xref:../rosa_install_access_delete_clusters/rosa_getting_started_iam/rosa-getting-started-workflow.adoc#rosa-understanding-the-deployment-workflow[Understanding the ROSA deployment workflow].
 
-* For more information about upgrading your cluster, see xref:../upgrading/rosa-upgrading-sts.adoc#rosa-upgrading-sts[Upgrading ROSA Classic clusters].
+* For more information about upgrading your cluster, see xref:../upgrading/rosa-upgrading-sts.adoc#rosa-upgrading-sts[Upgrading {product-title} clusters].
+endif::openshift-rosa-hcp[]
+ifdef::openshift-rosa-hcp[]
+[role="_additional-resources"]
+[id="additional-resources_{context}"]
+== Additional resources
+
+* For more information about upgrading your cluster, see xref:../upgrading/rosa-hcp-upgrading.adoc#rosa-hcp-upgrading[Upgrading {product-title} clusters].
+endif::openshift-rosa-hcp[]
