--- a/rosa_hcp/terraform/rosa-hcp-creating-a-cluster-quickly-terraform.adoc
+++ b/rosa_hcp/terraform/rosa-hcp-creating-a-cluster-quickly-terraform.adoc
@@ -35,4 +35,4 @@ include::modules/rosa-sts-cluster-terraform-destroy.adoc[leveloffset=+2]
 [role="_additional-resources"]
 [id="additional-resources_rosa-hcp-creating-a-cluster-quickly-terraform"]
 == Additional resources
-* xref:../../rosa_architecture/rosa-sts-about-iam-resources.adoc#rosa-sts-account-wide-roles-and-policies_rosa-sts-about-iam-resources[Account-wide IAM role and policy reference]
+* link:https://docs.openshift.com/rosa/rosa_architecture/rosa-sts-about-iam-resources.html#rosa-sts-account-wide-roles-and-policies_rosa-sts-about-iam-resources[Account-wide IAM role and policy reference]
